[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zygote_injection_toolkit"
version = "0.1"
dependencies = [
  "pure-python-adb@git+https://github.com/Anonymous941/pure-python-adb",
  "aidl@git+https://github.com/MatrixEditor/aidl-parser"
]
requires-python = ">=3"
description = "Toolkit for exploiting Android zygote injection (CVE-2024-31317)"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools.package-data]
zygote_injection_toolkit = ["*.aidl"]
